--- a/templates/home.html
+++ b/templates/home.html
@@ -2,26 +2,54 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title>home, bitter</title>
+		<title>home, board</title>
 		<link rel="stylesheet" href="/assets/style.css">
 	</head>
 	<body>
+		<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 		<div class="topnav">
-			<a id="home" href="/"><b>bitter</b></a>
-			<a href="#">find user</a>
-			<a href="#">find post</a>
+			<a id="home" href="/"><b>board</b></a>
 		</div>
 		<div class="main">
-			<h3>home, bitter</h3>
-			<div class="post">
-				<p class="body">post body</p>
+			<h3>home, board</h3>
+			<textarea form="post" name="body" rows="2" cols="40" placeholder="create a thread"></textarea>
+			<form id="post" autocomplete="off" action="/post" method="post">
+				<input type="submit" name="submit" value="create thread">
+			</form>
+			{{ range $post_id, $post := .posts }}
+				<div class="post">
+					<div class="info">
+						<a href="/post/{{ $post.Id }}">
+						<span class="id">{{ $post.Id }}</span> at
+						<span class="date">{{ $post.TimeString }}</span>, from
+						<span class="country">{{ $post.Country }}</span>
+						</a>
+					</div>
+					<p class="body">{{ $post.Body }}</p>
 
-				<div class="reply-section">
-					<div class="reply">
-						test
+					<div class="reply-section">
+						<form id="comment" action="/comment/{{ $post.Id }}" method="post">
+							<input type="text" name="body" placeholder="comment">
+							<input type="submit" name="submit" value="comment">
+						</form>
+						{{ range $comment_id, $comment := $post.Comments }}
+							{{ if le $comment_id 5 }}
+								<div class="reply">
+									<div class="info">
+										<span class="id">>>{{ $post.Id }}-{{ $comment.Id }}</span> at
+										<span class="date">{{ $comment.TimeString }}</span>, from
+										<span class="country">{{ $comment.Country }}</span>
+									</div>
+									<p class="body">{{ $comment.Body }}</p>
+								</div>
+							{{ end }}
+						{{ end }}
 					</div>
 				</div>
-			</div>
+			{{ end }}
 		</div>
 	</body>
 </html>
